# dawnpy-modbus

./: README.md  pyproject.toml  tox.ini
.github/workflows/: master.yml
src/dawnpy_modbus/: __init__.py  __main__.py  client.py  console.py
src/dawnpy_modbus/commands/: __init__.py  cmd_modbus.py
tests/: test_modbus_client.py
tests/fixtures/: modbus_rtu_dummy_map.yaml
